K8S/database.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database-app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: database-app
  template:
    metadata:
      labels:
        app: database-app
    spec:
      containers:
        - name: database-app-container
          image: mcr.microsoft.com/mssql/server:2019-latest
          ports:
            - containerPort: 1433
          volumeMounts: 
            - name: database-app-storage 
              mountPath: /var/opt/mssql
      volumes:
        - name: database-app-storage
          persistentVolumeClaim:  
            claimName: database-app-pvc      
---
apiVersion: v1
kind: Service
metadata:
  name: database-app-service
spec:
  selector:
    app: database-app
  ports:
    - protocol: TCP
      port: 1433
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: database-app-external-service
spec:
  selector:
    app: database-app
  ports:
    - protocol: TCP
      port: 1433
      targetPort: 1433
  type: LoadBalancer
